--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
       name="description"
       content="Abdirahman Haji's Resume Site, generated from JSON"
     />
+    <link rel="icon" 
+      type="image/ico" 
+      href="favicon.ico">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
